--- a/frontFarm/src/app/impresiones/pedido-ticket/pedido-ticket.component.html
+++ b/frontFarm/src/app/impresiones/pedido-ticket/pedido-ticket.component.html
@@ -1,13 +1,7 @@
 <!-- pedido-ticket.component.html -->
 <div class="ticket-impresion" id="ticketPedido" style="font-family: Roboto Condensed, Arial, sans-serif;">
-    <app-ticket-header
-        [nombreFarmacia]="pedido.farmaNombre"
-        [direccion]="pedido.farmaDireccion"
-        [telefono]="pedido.farmaTelefono"
-        [imagen]="pedido.farmaImagen"
-        [titulo1]="pedido.farmaTitulo1"
-        [titulo2]="pedido.farmaTitulo2">
-    </app-ticket-header>
+    
+    <app-ticket-header [farmacia]="header"></app-ticket-header>
 
     <div class="info-pedido">
         <div>Pedido: <strong>{{ pedido.pedido.descripcion }}</strong></div>
@@ -36,10 +30,11 @@
         <div class="info-general">
             <div style="font-size: 15px;">Folio pedido: {{ pedido.pedido.folio }}</div>
             Fecha: {{ fechaActual | date:'dd/MM/yyyy HH:mm' }} hrs.<br />
-            Atendió: {{ pedido.userName }}<br />
-            Cliente: {{ pedido.client || 'Público general' }}
+            Atendió: {{ pedido.usuario }}<br />
+            Cliente: {{ pedido.cliente || 'Público general' }}
         </div>
         <hr />
+        
         <app-ticket-footer></app-ticket-footer>
     </div>
 </div>
