--- a/frontFarm/src/app/impresiones/corte-caja-ticket/corte-caja-ticket.component.css
+++ b/frontFarm/src/app/impresiones/corte-caja-ticket/corte-caja-ticket.component.css
@@ -1,6 +1,6 @@
 .corte-caja-encabezado,
 .corte-caja-datos {
-  font-size: 16px !important;
+  font-size: 14px !important;
   line-height: 1.4 !important;
   box-sizing: border-box;
 }
@@ -13,7 +13,7 @@
 @media print {
   @page {
     margin-left: 10pt !important;
-    size: 95mm auto;
+    size: 72mm auto;
   }
 
   html, body {
@@ -31,11 +31,11 @@
   }
 
   .ticket-corteCaja {
-    width: 95mm !important;              
+    width: 72mm !important;              
     margin-left: 10pt !important;
     padding: 0 !important;
     box-sizing: border-box !important;
-    font-size: 12px !important;
+    /* font-size: 12px !important; */
     line-height: 1.4 !important;
     position: absolute !important;
     left: 0 !important;
