--- a/frontFarm/src/app/impresiones/pedido-ticket/pedido-ticket.component.css
+++ b/frontFarm/src/app/impresiones/pedido-ticket/pedido-ticket.component.css
@@ -1,7 +1,11 @@
 .info-general {
-  font-size: 14px !important;
+  font-size: 12px !important;
 }
 
 .info-pedido {
-  font-size: 16px !important;
+  font-size: 13px !important;
+}
+
+.folio-ticket {
+  font-size: 13px !important;
 }
