--- a/frontFarm/src/app/impresiones/ticket-footer/ticket-footer.component.css
+++ b/frontFarm/src/app/impresiones/ticket-footer/ticket-footer.component.css
@@ -1,5 +1,6 @@
 .mensaje-final {
     text-align: center;
-    margin-top: 10px;
+    margin-top: 8px;
     font-weight: bold;
+    font-size: 14px !important;
 }
