Inclusión de la ubicación de medicamentos en tabla inventario de farmacias

--- a/frontFarm/src/app/admin/farmacias/ajustes-inventario-farmacia/ajustes-inventario-farmacia.component.html
+++ b/frontFarm/src/app/admin/farmacias/ajustes-inventario-farmacia/ajustes-inventario-farmacia.component.html
@@ -160,10 +160,7 @@
                     <small class="codigo-mini">{{ i.producto?.codigoBarras || '—' }}</small>
                 </td>
 
-                <td class="col-ubicacion">
-                    <input [disabled]="!estadoEdicion[i._id]" [(ngModel)]="i.ubicacionEnFarmacia" type="text"
-                        class="form-control form-control-sm w-100">
-                </td>
+                <td>{{ i.producto?.ubicacion }}</td>
 
                 <td>{{ i.producto?.categoria }}</td>
 
