--- a/frontFarm/src/app/pages/surtir-farmacia/surtir-farmacia.component.html
+++ b/frontFarm/src/app/pages/surtir-farmacia/surtir-farmacia.component.html
@@ -69,7 +69,8 @@
         <th>Producto</th>
         <th>Cód. Barras</th>
         <th>Categoría</th>
-        <th>Ubicación</th>
+        <th>Ubic almac</th>
+        <th>Ubic farma</th>
         <th>Existencia</th>
         <th>Stock Mínimo</th>
         <th>Stock Máximo</th>
@@ -87,6 +88,7 @@
         <td>{{ p.codigoBarras }}</td>
         <td>{{ p.categoria }}</td>
         <td>{{ p.ubicacion }}</td>
+        <td>{{ p.ubicacionFarmacia }}</td>
         <td>{{ p.existenciaActual }}</td>
         <td>{{ p.stockMin }}</td>
         <td>{{ p.stockMax }}</td>
