--- a/frontFarm/src/app/components/ajuste-inventario/modal-editar-producto/modal-editar-producto.component.html
+++ b/frontFarm/src/app/components/ajuste-inventario/modal-editar-producto/modal-editar-producto.component.html
@@ -32,8 +32,8 @@
                 <input type="checkbox" formControlName="descuentoINAPAM">
                 <label>Costo:</label>
                 <input type="number" formControlName="costo" style="width: 5rem;" step="0.1">
-                <label>Precio:</label>
-                <input type="number" formControlName="precio" style="width: 5rem;" step="0.1">
+                <!-- <label>Precio:</label>
+                <input type="number" formControlName="precio" style="width: 5rem;" step="0.1"> 
 
 
                 <small *ngIf="utilPct !== null; else sinDato" [style.color]="utilColor">
@@ -42,7 +42,7 @@
                 <ng-template #sinDato>—</ng-template>
                 <small *ngIf="utilAbs !== null" [style.color]="utilColor">
                     ({{ utilAbs | currency }})
-                </small>
+                </small>-->
 
                 <label style="margin-left: 2rem;">Ubicación:</label>
                 <input type="text" formControlName="ubicacion" style="width: 13rem;">
