--- a/frontFarm/src/app/pages/ajustes-inventario/ajustes-inventario.component.html
+++ b/frontFarm/src/app/pages/ajustes-inventario/ajustes-inventario.component.html
@@ -143,9 +143,9 @@
             <div>
                 <!-- <label class="tit-promo" style="margin-right: 1rem;">Datos básicos:</label> -->
                 <label style="margin-right: 10px;">Categoría:</label>
-                <input style="width: 100px; margin-right: 2rem;" type="text" formControlName="categoria">
+                <input style="width: 100px; margin-right: 3rem;" type="text" formControlName="categoria">
                 <label style="margin-right: 10px;">Ubicación:</label>
-                <input style="width: 100px; margin-right: 2rem;" type="text" formControlName="ubicacion">
+                <input style="width: 100px; margin-right: 3rem;" type="text" formControlName="ubicacion">
                 <label style="margin-right: 10px;">Stock Mínimo:</label>
                 <input style="width: 50px; margin-right: 2rem;" type="number" formControlName="stockMinimo">
                 <label style="margin-right: 10px;">Stock Máximo:</label>
@@ -158,7 +158,7 @@
                 </select>
             </div>
             <!-- 🟡 Zona Ajuste de Precios -->
-            <div>
+            <!-- <div>
                 <label class="tit-promo" style="margin-right: 2rem;">Sube/baja Precios:</label>
 
                 <label [ngClass]="{'selected-radio': formularioMasivo.get('ajustePrecioModo')?.value === 'porcentaje'}"
@@ -178,7 +178,7 @@
                     style="margin-right: 10px;">$:</label>
                 <input [class.disabled-label]="formularioMasivo.get('ajustePrecioModo')?.value != 'cantidad'"
                     type="number" style="width: 50px; margin-right: 5rem;" formControlName="ajustePrecioCantidad">
-            </div>
+            </div> -->
         </div>
 
         <!-- Zona Promociones -->
@@ -313,7 +313,7 @@
                 </th>
                 <th>INAPAM</th>
                 <th>Costo</th>
-                <th>Precio</th>
+                <!-- <th>Precio</th> -->
                 <th>Acciones</th>
             </tr>
         </thead>
@@ -374,7 +374,7 @@
                     <input type="checkbox" [checked]="p.descuentoINAPAM" disabled>
                 </td>
                 <td>{{ p.costo | currency }}</td>
-                <td>{{ p.precio |currency }}</td>
+                <!-- <td>{{ p.precio |currency }}</td> -->
                 <td>
                     <button class="btn-icon-chico btn-gris-chico" (click)="editarProducto(p)"
                         matTooltip="Editar producto">
